--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pasteleria FISI</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700i,900i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <!-- Pre loader -->
-  <div class="pre-loader">
-    <div class="superior"><!-- Puto el que lo lea --></div>
+  <div class="pre-loader" id="preloader">
     <div class="inferior"></div>
+    <div class="superior"><!-- Puto el que lo lea --></div>
   </div>
   <!-- Pre loader -->
 
@@ -101,6 +100,27 @@
   </section>
   <!-- Galeria -->
 
+  <!-- Mapa -->
+
+  <div class="mapa-container">
+    <div class="info-container" id="info-container">
+      <div class="sombra">
+        <div class="caja-container" id="caja-container">
+          <div class="caja" id="caja">
+            <h1>Contacta con nosotros</h1>
+            <p>C/ Alameda Urquijo nº39, Bilbao, CP 48010</p>
+            <p>944-438-672</p>
+          </div>
+          <button id="button">Ver ubicación del mapa</button>
+        </div>
+      </div>
+    </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.8075103632464!2d-77.08578074997803!3d-12.05676133000815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c94f4c6ba8b7%3A0x616ad278fd884ba8!2sFacultad%20de%20Ingenier%C3%ADa%20de%20Sistemas%20e%20Inform%C3%A1tica%20(UNMSM)%2C%20Av.%20Germ%C3%A1n%20Am%C3%A9zaga%20s%2Fn%2C%20Cercado%20de%20Lima%2015081!5e0!3m2!1ses-419!2spe!4v1570301087414!5m2!1ses-419!2spe" width="100%" height="550" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  </div>
+  
+  <!-- Mapa -->
+
+  <script src="js/script.js"></script>  
   <script src="https://kit.fontawesome.com/9ba1130819.js"></script>
 </body>
 
