--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <ul>
           <li class="menu-item"><a href="" class="item-a" style="color: #ffae00">INICIO</a></li>
           <li class="menu-item"><a href="" class="item-a">SOBRE NOSOTROS</a></li>
-          <li class="menu-item"><a href="" class="item-a">PRODUCTOS</a></li>
-          <li class="menu-item"><a href="" class="item-a">NOTICIAS</a></li>
-          <li class="menu-item"><a href="" class="item-a">CONTACTO</a></li>
+          <li class="menu-item"><a href="./html/formulario.html" class="item-a">FORMULARIO</a></li>
           <li class="menu-item"><a href="" class="item-a"><i class="fab fa-facebook-f"></i></a></li>
           <li class="menu-item"><a href="" class="item-a"><i class="fab fa-twitter"></i></a></li>
           <li class="menu-item"><a href="" class="item-a"><i class="fab fa-instagram"></i></a></li>
@@ -101,7 +99,6 @@
   <!-- Galeria -->
 
   <!-- Mapa -->
-
   <div class="mapa-container">
     <div class="info-container" id="info-container">
       <div class="sombra">
@@ -117,11 +114,9 @@
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.8075103632464!2d-77.08578074997803!3d-12.05676133000815!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c94f4c6ba8b7%3A0x616ad278fd884ba8!2sFacultad%20de%20Ingenier%C3%ADa%20de%20Sistemas%20e%20Inform%C3%A1tica%20(UNMSM)%2C%20Av.%20Germ%C3%A1n%20Am%C3%A9zaga%20s%2Fn%2C%20Cercado%20de%20Lima%2015081!5e0!3m2!1ses-419!2spe!4v1570301087414!5m2!1ses-419!2spe" width="100%" height="550" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
   </div>
-  
   <!-- Mapa -->
 
   <script src="js/script.js"></script>  
   <script src="https://kit.fontawesome.com/9ba1130819.js"></script>
 </body>
-
 </html>
